--- a/org.lowcomote.panoptes.xtext.web/WebRoot/index.html
+++ b/org.lowcomote.panoptes.xtext.web/WebRoot/index.html
@@ -27,13 +27,31 @@
 					syntaxDefinition: "xtext-resources/generated/mode-panoptesx",
 					resourceId: "platform.panoptesx"
 				});
-				$("#save-button").click(function() {
-					editor.xtextServices.saveResource();
-				});
 				$("#apply-button").click(function() {
-					fetch('/xtext-service/apply?resource=platform.panoptesx')
-					  .then((response) => response.json())
-					  .then((data) => console.log(data));
+					$("#apply-button").attr('disabled','disabled')
+					$("#status").text('please wait')
+					editor.xtextServices.saveResource()
+						.then(() => fetch('/xtext-service/apply?resource=platform.panoptesx'))
+						.then((response) => {
+							if (response.ok){
+								$("#apply-button").removeAttr('disabled')
+								$("#status").text('success')
+								new Promise(resolve => setTimeout(resolve, 5000))
+								.then(() => $("#status").text(''))
+							}
+							else{
+								$("#apply-button").removeAttr('disabled')
+								$("#status").text('failed')
+								new Promise(resolve => setTimeout(resolve, 5000))
+								.then(() => $("#status").text(''))
+							}
+						})
+						.catch((error) => {
+							$("#apply-button").removeAttr('disabled')
+							$("#status").text('failed')
+							new Promise(resolve => setTimeout(resolve, 5000))
+							.then(() => $("#status").text(''))
+						})
 				});
 			});
 		});
@@ -49,8 +67,8 @@
 		<div id="xtext-editor" data-editor-xtext-lang="panoptesx"></div>
 	</div>
 	<div class = "buttons">
-		<button id="save-button">Save</button>
 		<button id="apply-button">Apply</button>
+		<span id="status"></span>
 	</div>
 </div>
 </body>
